--- a/2023_fall/lec12/lec12_notebook.ipynb
+++ b/2023_fall/lec12/lec12_notebook.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "73ad19aa",
    "metadata": {},
    "outputs": [
@@ -459,112 +459,174 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EEEE\n",
+      "FFFF\n",
       "======================================================================\n",
-      "ERROR: test_method_creates_correct_synthesis_english (grade.Test)\n",
+      "FAIL: test_method_creates_correct_synthesis_english (grade.Test)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 44, in test_method_creates_correct_synthesis_english\n",
-      "    self.synthesize(\"This is speech synthesis!\",\"en\",\"english.mp3\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 24, in synthesize\n",
-      "    self.homework12.synthesize(text, lang, filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/homework12.py\", line 12, in synthesize\n",
-      "    raise RuntimeError(\"FAIL! You need to change this function so that it works!\")\n",
-      "RuntimeError: FAIL! You need to change this function so that it works!\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 18, in import_homework12\n",
+      "    import homework12\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\homework12.py\", line 1, in <module>\n",
+      "    import gtts\n",
+      "ModuleNotFoundError: No module named 'gtts'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 44, in test_method_creates_correct_synthesis_english\n",
+      "    self.import_homework12()\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 21, in import_homework12\n",
+      "    self.fail(\"You did not upload a text file called homework12.py!\")\n",
+      "AssertionError: You did not upload a text file called homework12.py!\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_method_creates_correct_synthesis_spanish (grade.Test)\n",
+      "FAIL: test_method_creates_correct_synthesis_spanish (grade.Test)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 58, in test_method_creates_correct_synthesis_spanish\n",
-      "    self.synthesize(\"¡Esto es síntesis de voz!\",\"es\",\"spanish.mp3\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 24, in synthesize\n",
-      "    self.homework12.synthesize(text, lang, filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/homework12.py\", line 12, in synthesize\n",
-      "    raise RuntimeError(\"FAIL! You need to change this function so that it works!\")\n",
-      "RuntimeError: FAIL! You need to change this function so that it works!\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 18, in import_homework12\n",
+      "    import homework12\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\homework12.py\", line 1, in <module>\n",
+      "    import gtts\n",
+      "ModuleNotFoundError: No module named 'gtts'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 58, in test_method_creates_correct_synthesis_spanish\n",
+      "    self.import_homework12()\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 21, in import_homework12\n",
+      "    self.fail(\"You did not upload a text file called homework12.py!\")\n",
+      "AssertionError: You did not upload a text file called homework12.py!\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_method_creates_file (grade.Test)\n",
+      "FAIL: test_method_creates_file (grade.Test)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 39, in test_method_creates_file\n",
-      "    self.synthesize(\"This is speech synthesis!\",\"en\",\"english.mp3\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 24, in synthesize\n",
-      "    self.homework12.synthesize(text, lang, filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/homework12.py\", line 12, in synthesize\n",
-      "    raise RuntimeError(\"FAIL! You need to change this function so that it works!\")\n",
-      "RuntimeError: FAIL! You need to change this function so that it works!\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 18, in import_homework12\n",
+      "    import homework12\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\homework12.py\", line 1, in <module>\n",
+      "    import gtts\n",
+      "ModuleNotFoundError: No module named 'gtts'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 39, in test_method_creates_file\n",
+      "    self.import_homework12()\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 21, in import_homework12\n",
+      "    self.fail(\"You did not upload a text file called homework12.py!\")\n",
+      "AssertionError: You did not upload a text file called homework12.py!\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_method_exists (grade.Test)\n",
+      "FAIL: test_method_exists (grade.Test)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 34, in test_method_exists\n",
-      "    self.synthesize(\"This is speech synthesis!\",\"en\",\"english.mp3\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 24, in synthesize\n",
-      "    self.homework12.synthesize(text, lang, filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/homework12.py\", line 12, in synthesize\n",
-      "    raise RuntimeError(\"FAIL! You need to change this function so that it works!\")\n",
-      "RuntimeError: FAIL! You need to change this function so that it works!\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 18, in import_homework12\n",
+      "    import homework12\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\homework12.py\", line 1, in <module>\n",
+      "    import gtts\n",
+      "ModuleNotFoundError: No module named 'gtts'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 34, in test_method_exists\n",
+      "    self.import_homework12()\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 21, in import_homework12\n",
+      "    self.fail(\"You did not upload a text file called homework12.py!\")\n",
+      "AssertionError: You did not upload a text file called homework12.py!\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.004s\n",
+      "Ran 4 tests in 0.010s\n",
       "\n",
-      "FAILED (errors=4)\n",
-      "EEEE\n",
+      "FAILED (failures=4)\n",
+      "FFFF\n",
       "======================================================================\n",
-      "ERROR: test_method_creates_correct_synthesis_english (grade.Test)\n",
+      "FAIL: test_method_creates_correct_synthesis_english (grade.Test)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 44, in test_method_creates_correct_synthesis_english\n",
-      "    self.synthesize(\"This is speech synthesis!\",\"en\",\"english.mp3\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 24, in synthesize\n",
-      "    self.homework12.synthesize(text, lang, filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/homework12.py\", line 12, in synthesize\n",
-      "    raise RuntimeError(\"FAIL! You need to change this function so that it works!\")\n",
-      "RuntimeError: FAIL! You need to change this function so that it works!\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 18, in import_homework12\n",
+      "    import homework12\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\homework12.py\", line 1, in <module>\n",
+      "    import gtts\n",
+      "ModuleNotFoundError: No module named 'gtts'\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_method_creates_correct_synthesis_spanish (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 58, in test_method_creates_correct_synthesis_spanish\n",
-      "    self.synthesize(\"¡Esto es síntesis de voz!\",\"es\",\"spanish.mp3\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 24, in synthesize\n",
-      "    self.homework12.synthesize(text, lang, filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/homework12.py\", line 12, in synthesize\n",
-      "    raise RuntimeError(\"FAIL! You need to change this function so that it works!\")\n",
-      "RuntimeError: FAIL! You need to change this function so that it works!\n",
+      "During handling of the above exception, another exception occurred:\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_method_creates_file (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 39, in test_method_creates_file\n",
-      "    self.synthesize(\"This is speech synthesis!\",\"en\",\"english.mp3\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 24, in synthesize\n",
-      "    self.homework12.synthesize(text, lang, filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/homework12.py\", line 12, in synthesize\n",
-      "    raise RuntimeError(\"FAIL! You need to change this function so that it works!\")\n",
-      "RuntimeError: FAIL! You need to change this function so that it works!\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 44, in test_method_creates_correct_synthesis_english\n",
+      "    self.import_homework12()\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 21, in import_homework12\n",
+      "    self.fail(\"You did not upload a text file called homework12.py!\")\n",
+      "AssertionError: You did not upload a text file called homework12.py!\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_method_exists (grade.Test)\n",
+      "FAIL: test_method_creates_correct_synthesis_spanish (grade.Test)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 34, in test_method_exists\n",
-      "    self.synthesize(\"This is speech synthesis!\",\"en\",\"english.mp3\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py\", line 24, in synthesize\n",
-      "    self.homework12.synthesize(text, lang, filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/homework12.py\", line 12, in synthesize\n",
-      "    raise RuntimeError(\"FAIL! You need to change this function so that it works!\")\n",
-      "RuntimeError: FAIL! You need to change this function so that it works!\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 18, in import_homework12\n",
+      "    import homework12\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\homework12.py\", line 1, in <module>\n",
+      "    import gtts\n",
+      "ModuleNotFoundError: No module named 'gtts'\n",
       "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 58, in test_method_creates_correct_synthesis_spanish\n",
+      "    self.import_homework12()\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 21, in import_homework12\n",
+      "    self.fail(\"You did not upload a text file called homework12.py!\")\n",
+      "AssertionError: You did not upload a text file called homework12.py!\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_method_creates_file (grade.Test)\n",
       "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.004s\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 18, in import_homework12\n",
+      "    import homework12\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\homework12.py\", line 1, in <module>\n",
+      "    import gtts\n",
+      "ModuleNotFoundError: No module named 'gtts'\n",
       "\n",
-      "FAILED (errors=4)\n"
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 39, in test_method_creates_file\n",
+      "    self.import_homework12()\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 21, in import_homework12\n",
+      "    self.fail(\"You did not upload a text file called homework12.py!\")\n",
+      "AssertionError: You did not upload a text file called homework12.py!\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_method_exists (grade.Test)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 18, in import_homework12\n",
+      "    import homework12\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\homework12.py\", line 1, in <module>\n",
+      "    import gtts\n",
+      "ModuleNotFoundError: No module named 'gtts'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 34, in test_method_exists\n",
+      "    self.import_homework12()\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec12\\grade.py\", line 21, in import_homework12\n",
+      "    self.fail(\"You did not upload a text file called homework12.py!\")\n",
+      "AssertionError: You did not upload a text file called homework12.py!\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 0.008s\n",
+      "\n",
+      "FAILED (failures=4)\n"
      ]
     },
     {
@@ -580,10 +642,10 @@
     {
      "data": {
       "text/plain": [
-       "<module 'grade' from '/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec12/grade.py'>"
+       "<module 'grade' from 'C:\\\\Users\\\\XU HUI\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec12\\\\grade.py'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
